@@ -54,53 +54,60 @@ Class Predb
 		$db = new DB();
 		$newnames = 0;
 
-		$buffer = getUrl("http://www.newshost.co.za");
-		if ($buffer !== false && strlen($buffer))
-		{
-			if (preg_match_all('/<tr bgcolor=#[df]{6}>.+?<\/tr>/s', $buffer, $matches))
+		$date = new DateTime();
+		$today = date('Ymd')."\n";
+		$strDateFrom='20130621';
+		$arr = $this->dateRangeArray($strDateFrom,$today);
+		foreach ($arr as $day) {
+			$buffer = getUrl("http://www.newshost.co.za/?date=".$day);
+			echo "http://www.newshost.co.za/?date".$day."\n";
+			if ($buffer !== false && strlen($buffer))
 			{
-				foreach ($matches as $match)
+				if (preg_match_all('/<tr bgcolor=#[df]{6}>.+?<\/tr>/s', $buffer, $matches))
 				{
-					foreach ($match as $m)
+					foreach ($matches as $match)
 					{
-						if (preg_match('/<tr bgcolor=#[df]{6}>.+?<td>(?P<date>.+?)<\/td>(.+?right>(?P<size1>.+?)&nbsp;(?P<size2>.+?)<\/td.+?)?<td>(?P<category>.+?)<\/td.+?<a href=.+?(<a href="(?P<nfo>.+?)">nfo<\/a>.+)?<td>(?P<title>.+?)<\/td.+tr>/s', $m, $matches2))
+						foreach ($match as $m)
 						{
-							$oldname = $db->queryOneRow(sprintf("SELECT title, source, ID FROM predb WHERE title = %s", $db->escapeString($matches2["title"])));
-							if ($oldname["title"] == $matches2["title"])
+							if (preg_match('/<tr bgcolor=#[df]{6}>.+?<td>(?P<date>.+?)<\/td>(.+?right>(?P<size1>.+?)&nbsp;(?P<size2>.+?)<\/td.+?)?<td>(?P<category>.+?)<\/td.+?<a href=.+?(<a href="(?P<nfo>.+?)">nfo<\/a>.+)?<td>(?P<title>.+?)<\/td.+tr>/s', $m, $matches2))
 							{
-								if ($oldname["source"] == "womble")
-									continue;
+								$oldname = $db->queryOneRow(sprintf("SELECT title, source, ID FROM predb WHERE title = %s", $db->escapeString($matches2["title"])));
+								if ($oldname["title"] == $matches2["title"])
+								{
+									if ($oldname["source"] == "womble")
+										continue;
+									else
+									{
+										if (!isset($matches2["size1"]) && empty($matches["size1"]))
+											$size = "NULL";
+										else
+											$size = $db->escapeString($matches2["size1"].$matches2["size2"]);
+
+										if ($matches2["nfo"] == "")
+											$nfo = "NULL";
+										else
+											$nfo = $db->escapeString("http://nzb.isasecret.com/".$matches2["nfo"]);
+
+										$db->query(sprintf("UPDATE predb SET nfo = %s, size = %s, category = %s, predate = FROM_UNIXTIME(".strtotime($matches2["date"])."), adddate = now(), source = %s where ID = %d", $nfo, $size, $db->escapeString($matches2["category"]), $db->escapeString("womble"), $oldname["ID"]));
+										$newnames++;
+									}
+								}
 								else
 								{
 									if (!isset($matches2["size1"]) && empty($matches["size1"]))
 										$size = "NULL";
 									else
 										$size = $db->escapeString($matches2["size1"].$matches2["size2"]);
-								
+
 									if ($matches2["nfo"] == "")
 										$nfo = "NULL";
 									else
 										$nfo = $db->escapeString("http://nzb.isasecret.com/".$matches2["nfo"]);
-								
-									$db->query(sprintf("UPDATE predb SET nfo = %s, size = %s, category = %s, predate = FROM_UNIXTIME(".strtotime($matches2["date"])."), adddate = now(), source = %s where ID = %d", $nfo, $size, $db->escapeString($matches2["category"]), $db->escapeString("womble"), $oldname["ID"]));
+
+									$db->query(sprintf("INSERT INTO predb (title, nfo, size, category, predate, adddate, source, md5) VALUES (%s, %s, %s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $nfo, $size, $db->escapeString($matches2["category"]), $db->escapeString("womble"), $db->escapeString(md5($matches2["title"]))));
 									$newnames++;
 								}
 							}
-							else
-							{
-								if (!isset($matches2["size1"]) && empty($matches["size1"]))
-									$size = "NULL";
-								else
-									$size = $db->escapeString($matches2["size1"].$matches2["size2"]);
-								
-								if ($matches2["nfo"] == "")
-									$nfo = "NULL";
-								else
-									$nfo = $db->escapeString("http://nzb.isasecret.com/".$matches2["nfo"]);
-								
-								$db->query(sprintf("INSERT IGNORE INTO predb (title, nfo, size, category, predate, adddate, source, md5) VALUES (%s, %s, %s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $nfo, $size, $db->escapeString($matches2["category"]), $db->escapeString("womble"), $db->escapeString(md5($matches2["title"]))));
-								$newnames++;
-							}	
 						}
 					}
 				}
@@ -115,6 +122,7 @@ Class Predb
 		$newnames = 0;
 
 		$buffer = getUrl("http://rss.omgwtfnzbs.org/rss-info.php");
+		echo "http://rss.omgwtfnzbs.org/rss-info.php\n";
 		if ($buffer !== false && strlen($buffer))
 		{
 			if (preg_match_all('/<item>.+?<\/item>/s', $buffer, $matches))
@@ -144,7 +152,7 @@ Class Predb
 							{
 								$size = $db->escapeString(round($matches2["size1"]).$matches2["size2"]);
 
-								$db->query(sprintf("INSERT IGNORE INTO predb (title, size, category, predate, adddate, source, md5) VALUES (%s, %s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $size, $db->escapeString($matches2["category"]), $db->escapeString("omgwtfnzbs"), $db->escapeString(md5($matches2["title"]))));
+								$db->query(sprintf("INSERT INTO predb (title, size, category, predate, adddate, source, md5) VALUES (%s, %s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $size, $db->escapeString($matches2["category"]), $db->escapeString("omgwtfnzbs"), $db->escapeString(md5($matches2["title"]))));
 								$newnames++;
 							}
 						}
@@ -161,6 +169,7 @@ Class Predb
 		$newnames = 0;
 
 		$buffer = getUrl("http://pre.zenet.org/live.php");
+		echo "http://pre.zenet.org/live.php\n";
 		if ($buffer !== false && strlen($buffer))
 		{
 			if (preg_match_all('/<tr bgcolor=".+?<\/tr>/s', $buffer, $matches))
@@ -188,7 +197,7 @@ Class Predb
 								else
 									$category = "NULL";
 
-								$db->query(sprintf("INSERT IGNORE INTO predb (title, size, category, predate, adddate, source, md5) VALUES (%s, %s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $size, $category, $db->escapeString("zenet"), $db->escapeString(md5($matches2["title"]))));
+								$db->query(sprintf("INSERT INTO predb (title, size, category, predate, adddate, source, md5) VALUES (%s, %s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $size, $category, $db->escapeString("zenet"), $db->escapeString(md5($matches2["title"]))));
 								$newnames++;
 							}
 						}
@@ -204,68 +213,18 @@ Class Predb
 		$db = new DB();
 		$newnames = 0;
 
-		$buffer = getUrl("http://www.prelist.ws/");
-		if ($buffer !== false && strlen($buffer))
-		{
-			if (preg_match_all('/<small><span.+?<\/span><\/small>/s', $buffer, $matches))
+		foreach (range(1, 500, 50) as $number) {
+			$buffer = getUrl("http://www.prelist.ws/?start=".$number);
+			echo "http://www.prelist.ws/?start=".$number."\n";
+			if ($buffer !== false && strlen($buffer))
 			{
-				foreach ($matches as $match)
+				if (preg_match_all('/<small><span.+?<\/span><\/small>/s', $buffer, $matches))
 				{
-					foreach ($match as $m)
+					foreach ($matches as $match)
 					{
-						if (!preg_match('/NUKED/', $m) && preg_match('/">\[ (?P<date>.+?) U.+?">(?P<category>.+?)<\/a>.+?">(?P<title>.+?)<\/a>.+?(b>\[ (?P<size>.+?) \]<\/b)?/si', $m, $matches2))
+						foreach ($match as $m)
 						{
-							$oldname = $db->queryOneRow(sprintf("SELECT title FROM predb WHERE title = %s", $db->escapeString($matches2["title"])));
-							if ($oldname["title"] == $matches2["title"])
-								continue;
-							else
-							{
-								if (!isset($matches2["size"]) && empty($matches["size"]))
-									$size = "NULL";
-								else
-									$size = $db->escapeString(round($matches2["size"]));
-								
-								$db->query(sprintf("INSERT IGNORE INTO predb (title, size, category, predate, adddate, source, md5) VALUES (%s, %s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $size, $db->escapeString($matches2["category"]), $db->escapeString("prelist"), $db->escapeString(md5($matches2["title"]))));
-								$newnames++;
-							}
-						}
-						else if (preg_match('/">\[ (?P<date>.+?) U.+?">(?P<category>.+?)<\/a>.+?">(?P<category1>.+?)<\/a.+">(?P<title>.+?)<\/a>/si', $m, $matches2))
-						{
-							$oldname = $db->queryOneRow(sprintf("SELECT title FROM predb WHERE title = %s", $db->escapeString($matches2["title"])));
-							if ($oldname["title"] == $matches2["title"])
-								continue;
-							else
-							{
-								$category = $db->escapeString($matches2["category"].", ".$matches2["category1"]);
-								
-								$db->query(sprintf("INSERT IGNORE INTO predb (title, category, predate, adddate, source, md5) VALUES (%s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $category, $db->escapeString("prelist"), $db->escapeString(md5($matches2["title"]))));
-								$newnames++;
-							}
-						}
-					}
-				}
-			}
-		}
-		return $newnames;
-	}
-	
-	public function retrieveOrlydb()
-	{
-		$db = new DB();
-		$newnames = 0;
-
-		$buffer = getUrl("http://www.orlydb.com/");
-		if ($buffer !== false && strlen($buffer))
-		{
-			if (preg_match('/<div id="releases">(.+)<div id="pager">/s', $buffer, $match))
-			{
-				if (preg_match_all('/<div>.+<\/div>/s', $match["1"], $matches))
-				{
-					foreach ($matches as $m1)
-					{
-						foreach ($m1 as $m)
-						{
-							if (preg_match('/timestamp">(?P<date>.+?)<\/span>.+?section">.+?">(?P<category>.+?)<\/a>.+?release">(?P<title>.+?)<\/span>(.+info">(?P<size>.+?) )?/s', $m, $matches2))
+							if (!preg_match('/NUKED/', $m) && preg_match('/">\[ (?P<date>.+?) U.+?">(?P<category>.+?)<\/a>.+?">(?P<title>.+?)<\/a>.+?(b>\[ (?P<size>.+?) \]<\/b)?/si', $m, $matches2))
 							{
 								$oldname = $db->queryOneRow(sprintf("SELECT title FROM predb WHERE title = %s", $db->escapeString($matches2["title"])));
 								if ($oldname["title"] == $matches2["title"])
@@ -275,10 +234,66 @@ Class Predb
 									if (!isset($matches2["size"]) && empty($matches["size"]))
 										$size = "NULL";
 									else
-										$size = $db->escapeString($matches2["size"]);
-								
-									$db->query(sprintf("INSERT IGNORE INTO predb (title, size, category, predate, adddate, source, md5) VALUES (%s, %s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $size, $db->escapeString($matches2["category"]), $db->escapeString("orlydb"), $db->escapeString(md5($matches2["title"]))));
+										$size = $db->escapeString(round($matches2["size"]));
+
+									$db->query(sprintf("INSERT INTO predb (title, size, category, predate, adddate, source, md5) VALUES (%s, %s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $size, $db->escapeString($matches2["category"]), $db->escapeString("prelist"), $db->escapeString(md5($matches2["title"]))));
 									$newnames++;
+								}
+							}
+							else if (preg_match('/">\[ (?P<date>.+?) U.+?">(?P<category>.+?)<\/a>.+?">(?P<category1>.+?)<\/a.+">(?P<title>.+?)<\/a>/si', $m, $matches2))
+							{
+								$oldname = $db->queryOneRow(sprintf("SELECT title FROM predb WHERE title = %s", $db->escapeString($matches2["title"])));
+								if ($oldname["title"] == $matches2["title"])
+									continue;
+								else
+								{
+									$category = $db->escapeString($matches2["category"].", ".$matches2["category1"]);
+
+									$db->query(sprintf("INSERT INTO predb (title, category, predate, adddate, source, md5) VALUES (%s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $category, $db->escapeString("prelist"), $db->escapeString(md5($matches2["title"]))));
+									$newnames++;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+		return $newnames;
+	}
+
+	public function retrieveOrlydb()
+	{
+		$db = new DB();
+		$newnames = 0;
+
+		foreach (range(1, 10) as $number) {
+			$buffer = getUrl("http://www.orlydb.com/".$number);
+			echo "http://www.orlydb.com/".$number."\n";
+			if ($buffer !== false && strlen($buffer))
+			{
+				if (preg_match('/<div id="releases">(.+)<div id="pager">/s', $buffer, $match))
+				{
+					if (preg_match_all('/<div>.+<\/div>/s', $match["1"], $matches))
+					{
+						foreach ($matches as $m1)
+						{
+							foreach ($m1 as $m)
+							{
+								if (preg_match('/timestamp">(?P<date>.+?)<\/span>.+?section">.+?">(?P<category>.+?)<\/a>.+?release">(?P<title>.+?)<\/span>(.+info">(?P<size>.+?) )?/s', $m, $matches2))
+								{
+									$oldname = $db->queryOneRow(sprintf("SELECT title FROM predb WHERE title = %s", $db->escapeString($matches2["title"])));
+									if ($oldname["title"] == $matches2["title"])
+										continue;
+									else
+									{
+										if (!isset($matches2["size"]) && empty($matches["size"]))
+											$size = "NULL";
+										else
+										$size = $db->escapeString($matches2["size"]);
+
+										$db->query(sprintf("INSERT INTO predb (title, size, category, predate, adddate, source, md5) VALUES (%s, %s, %s, FROM_UNIXTIME(".strtotime($matches2["date"])."), now(), %s, %s)", $db->escapeString($matches2["title"]), $size, $db->escapeString($matches2["category"]), $db->escapeString("orlydb"), $db->escapeString(md5($matches2["title"]))));
+										$newnames++;
+									}
 								}
 							}
 						}
@@ -294,6 +309,7 @@ Class Predb
 		$db = new DB();
 		$newnames = 0;
 		$releases = @simplexml_load_file('http://www.srrdb.com/feed/srrs');
+		echo "http://www.srrdb.com/feed/srrs\n";
 		if ($releases !== false)
 		{
 			foreach ($releases->channel->item as $release)
@@ -303,7 +319,7 @@ Class Predb
 					continue;
 				else
 				{
-					$db->query(sprintf("INSERT IGNORE INTO predb (title, predate, adddate, source, md5) VALUES (%s, FROM_UNIXTIME(".strtotime($release->pubDate)."), now(), %s, %s)", $db->escapeString($release->title), $db->escapeString("srrdb"), $db->escapeString(md5($release->title))));
+					$db->query(sprintf("INSERT INTO predb (title, predate, adddate, source, md5) VALUES (%s, FROM_UNIXTIME(".strtotime($release->pubDate)."), now(), %s, %s)", $db->escapeString($release->title), $db->escapeString("srrdb"), $db->escapeString(md5($release->title))));
 					$newnames++;
 				}
 			}
@@ -316,6 +332,7 @@ Class Predb
 		$db = new DB();
 		$newnames = 0;
 		$releases = @simplexml_load_file('http://predb.me/?rss');
+		echo "http://predb.me/?rss\n";
 		if ($releases !== false)
 		{
 			foreach ($releases->channel->item as $release)
@@ -325,7 +342,7 @@ Class Predb
 					continue;
 				else
 				{
-					$db->query(sprintf("INSERT IGNORE INTO predb (title, predate, adddate, source, md5) VALUES (%s, now(), now(), %s, %s)", $db->escapeString($release->title), $db->escapeString("predbme"), $db->escapeString(md5($release->title))));
+					$db->query(sprintf("INSERT INTO predb (title, predate, adddate, source, md5) VALUES (%s, now(), now(), %s, %s)", $db->escapeString($release->title), $db->escapeString("predbme"), $db->escapeString(md5($release->title))));
 					$newnames++;
 				}
 			}
@@ -341,11 +358,23 @@ Class Predb
 		if($this->echooutput)
 			echo "Matching up predb titles with release search names.\n";
 
-		if($res = $db->queryDirect("SELECT p.ID, r.ID as releaseID from predb p inner join releases r on p.title = r.searchname where p.releaseID is null"))
+		if($res = $db->queryDirect("SELECT p.ID, p.category, r.ID as releaseID from predb p inner join releases r on p.title = r.searchname where p.releaseID is null"))
+//		if($res = $db->queryDirect("SELECT p.ID, p.category, r.ID as releaseID from predb p inner join releases r on p.title = r.searchname"))
 		{
 			while ($row = mysqli_fetch_assoc($res))
 			{
 				$db->query(sprintf("UPDATE predb SET releaseID = %d where ID = %d", $row["releaseID"], $row["ID"]));
+				$catName=str_replace("TV-", '', $row["category"]);
+				$catName=str_replace("TV: ", '', $catName);
+				if($catID = $db->queryOneRow(sprintf("select ID from category where title = %s", $db->escapeString($catName))))
+				{
+					//print($row["category"]." - ".$catID["ID"]."\n");
+					$db->query(sprintf("UPDATE releases set categoryID = %d where ID = %d", $db->escapeString($catID["ID"]), $db->escapeString($row["ID"])));
+				}
+				else
+				{
+					print($row["category"]." - ".$catID["ID"]."\n");
+				}
 				echo ".";
 				$updated++;
 			}
@@ -362,6 +391,7 @@ Class Predb
 			echo "Matching up predb NFOs with releases missing an NFO.\n";
 
 		if($res = $db->queryDirect("SELECT r.ID, p.nfo from releases r inner join predb p on r.ID = p.releaseID where p.nfo is not null and r.nfostatus != 1"))
+		//if($res = $db->queryDirect("SELECT r.ID, p.nfo from releases r inner join predb p on r.ID = p.releaseID where p.nfo is not null"))
 		{
 			$nfo = new Nfo($this->echooutput);
 			while ($row = mysqli_fetch_assoc($res))
@@ -511,18 +541,32 @@ Class Predb
 		}
 		return $updated;
 	}
-	
+
 	public function getAll($offset, $offset2)
-	{			
+	{
 		$db = new DB();
 		return $db->query(sprintf("SELECT p.*, r.guid FROM predb p left join releases r on p.releaseID = r.ID ORDER BY p.adddate DESC limit %d,%d", $offset, $offset2));
 	}
-	
+
 	public function getCount()
-	{			
+	{
 		$db = new DB();
 		$count = $db->queryOneRow("SELECT count(*) as cnt from predb");
 		return $count["cnt"];
 	}
-}
 
+	function dateRangeArray($start, $end)
+	{
+		$range = array();
+
+		if (is_string($start) === true) $start = strtotime($start);
+		if (is_string($end) === true ) $end = strtotime($end);
+
+		do {
+			$range[] = date('Ymd', $start);
+			$start = strtotime("+ 1 day", $start);
+		} while($start <= $end);
+
+		return $range;
+	}
+}
