@@ -1,4 +1,5 @@
-07282013 -> jonnyboy -> added back changes to site-edit
+07282013 -> jonnyboy -> oops, removed sys.exit from safe backfill
+						added back changes to site-edit
 						rewrote all python scripts
 						added back changes to releases.php
 						added output back to postprocess
